--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <body>
         <h1>This is a header</h1>
-        <p>This is a paragraph</p>
+        <p>This is a paragraph.</p>
+        <p>This is another paragraph.</p>
     </body>
 </html>
